fix(Table): fix wrap text on cell (#2425)
closes #2419

--- a/src/components/Table/Cell/TableCell.css
+++ b/src/components/Table/Cell/TableCell.css
@@ -91,6 +91,22 @@
       var(--cell-padding-horizontal) + var(--resizer-width) + var(--buttons-wrapper-size)
     );
 
+    &_wrap {
+      &_truncate {
+        display: block;
+        overflow: hidden;
+        max-width: 100%;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
+
+      &_break {
+        max-width: 100%;
+        white-space: pre-wrap;
+        word-break: break-word;
+      }
+    }
+
     &_withoutPadding {
       padding: 0;
     }
